AG-29 fixed gallery + translation

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -1,4 +1,6 @@
 {
     "DRINKS" : "Borrel",
-    "EVENT" : "Evenement"
+    "EVENT" : "Evenement",
+    "ACTIVE" : "Actief",
+    "ARCHIVED" : "Gearchiveerd"
 }
