ag-84 updated translation + renamed form info

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -1,6 +1,6 @@
 {
     "DRINKS" : "Borrel",
     "EVENT" : "Evenement",
-    "ACTIVE" : "Actief",
+    "ACTIVE" : "Aankomend",
     "ARCHIVED" : "Gearchiveerd"
 }
