#ag-57 Added community avond category + changed sidebar title from Evenement -> Evenement / Community

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -3,6 +3,7 @@
     "EVENT" : "Evenement",
     "ACTIVE" : "Aankomend",
     "ARCHIVED" : "Gearchiveerd",
+    "COMMUNITY" : "Community Avond",
     "active" : "Actief",
     "inactive" : "Inactief"
 }
