Lijst van events is te zien

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -5,5 +5,17 @@
     "ARCHIVED" : "Gearchiveerd",
     "COMMUNITY" : "Community Avond",
     "active" : "Actief",
-    "inactive" : "Inactief"
+    "inactive" : "Inactief",
+    "January" : "Januari",
+    "February" : "Februari",
+    "March" : "Maart",
+    "April" : "April",
+    "May": "Mei",
+    "June" : "Juni",
+    "July" : "Juli",
+    "August" : "Augustus",
+    "September" : "September",
+    "October" : "Oktober",
+    "November" : "November",
+    "December" : "December"
 }
