ag-127 refactored gearchiveerd -> afgelopen

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -2,7 +2,7 @@
     "DRINKS" : "Borrel",
     "EVENT" : "Evenement",
     "ACTIVE" : "Aankomend",
-    "ARCHIVED" : "Gearchiveerd",
+    "ARCHIVED" : "Afgelopen",
     "COMMUNITY" : "Community Avond",
     "active" : "Actief",
     "inactive" : "Inactief",
